Track DFXML Python API

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/case-api-python"]
 	path = deps/case-api-python
 	url = https://github.com/casework/case-api-python.git
+[submodule "deps/dfxml"]
+	path = deps/dfxml
+	url = https://github.com/simsong/dfxml.git
