--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/dfxml"]
 	path = deps/dfxml
 	url = https://github.com/simsong/dfxml.git
+[submodule "deps/dfxml_schema"]
+	path = deps/dfxml_schema
+	url = https://github.com/dfxml-working-group/dfxml_schema.git
