Track upstream projects to convert examples to DFXML
These new Makefiles run validation steps to check the generated DFXML
against the schema.  They do not yet run *verification* checks to
confirm the files that should be translated are translated.  Those
checks may need to wait for CASE validation.

The CASE submodule URL currently points to my own fork while waiting for
syntax corrections to be accepted upstream.

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,12 @@
+[submodule "deps/case"]
+	path = deps/case
+	url = https://github.com/ajnelson-nist/case.git
 [submodule "deps/case-api-python"]
 	path = deps/case-api-python
 	url = https://github.com/casework/case-api-python.git
+[submodule "deps/case-implementation-plaso"]
+	path = deps/case-implementation-plaso
+	url = https://github.com/casework/case-implementation-plaso.git
 [submodule "deps/dfxml"]
 	path = deps/dfxml
 	url = https://github.com/simsong/dfxml.git
