Update DFXML submodule integration
Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -13,6 +13,26 @@
 
 SHELL = /bin/bash
 
+top_srcdir := ..
+
+dfxml_top_srcdir := $(top_srcdir)/deps/dfxml
+
+objects_py_dependencies := \
+  $(dfxml_top_srcdir)/dfxml/__init__.py \
+  $(dfxml_top_srcdir)/dfxml/objects.py
+
+make_differential_dfxml_dependencies := \
+  $(dfxml_top_srcdir)/dfxml/bin/make_differential_dfxml.py \
+  $(objects_py_dependencies)
+
+case_to_dfxml_dependencies := \
+  $(objects_py_dependencies) \
+  $(top_srcdir)/case_to_dfxml.py
+
+dfxml_to_case_dependencies := \
+  $(objects_py_dependencies) \
+  $(top_srcdir)/dfxml_to_case.py
+
 all:
 
 %.dfxml.validates.log: \
@@ -83,7 +103,7 @@ empty.json: \
 	mv _$@ $@
 
 single_file_0.dfxml: \
-  Objects.py \
+  $(objects_py_dependencies) \
   empty.json \
   single_file_0_dfxml.py
 	rm -f _$@ __$@
@@ -91,22 +111,22 @@ single_file_0.dfxml: \
 	mv _$@ $@
 
 single_file_0_2_deltas.dfxml: \
-  make_differential_dfxml.py \
+  $(make_differential_dfxml_dependencies) \
   single_file_2.dfxml.validates.log
 	rm -f _$@
-	python make_differential_dfxml.py --retain-unchanged single_file_{0,2}.dfxml | xmllint --format - > _$@
+	make_differential_dfxml --retain-unchanged single_file_{0,2}.dfxml | xmllint --format - > _$@
 	mv _$@ $@
 
 single_file_0_json_2_deltas.dfxml: \
-  make_differential_dfxml.py \
+  $(make_differential_dfxml_dependencies) \
   single_file_2.json.dfxml.validates.log
 	rm -f _$@
-	python make_differential_dfxml.py --retain-unchanged single_file_0.dfxml single_file_2.json.dfxml | xmllint --format - > _$@
+	make_differential_dfxml --retain-unchanged single_file_0.dfxml single_file_2.json.dfxml | xmllint --format - > _$@
 	mv _$@ $@
 
 single_file_1.json: \
   ../.setup_complete \
-  ../dfxml_to_case.py \
+  $(dfxml_to_case_dependencies) \
   single_file_0.dfxml.validates.log
 	rm -f _$@
 	python ../dfxml_to_case.py --debug --output-format=json-ld single_file_0.dfxml _$@
@@ -114,7 +134,7 @@ single_file_1.json: \
 
 single_file_1.rdf: \
   ../.setup_complete \
-  ../dfxml_to_case.py \
+  $(dfxml_to_case_dependencies) \
   single_file_0.dfxml.validates.log
 	rm -f _$@
 	python ../dfxml_to_case.py --debug --output-format=xml single_file_0.dfxml _$@
@@ -122,28 +142,28 @@ single_file_1.rdf: \
 
 single_file_1.ttl: \
   ../.setup_complete \
-  ../dfxml_to_case.py \
+  $(dfxml_to_case_dependencies) \
   single_file_0.dfxml.validates.log
 	rm -f _$@
 	python ../dfxml_to_case.py --debug --output-format=ttl single_file_0.dfxml _$@
 	mv _$@ $@
 
 single_file_2.dfxml: \
-  ../case_to_dfxml.py \
+  $(case_to_dfxml_dependencies) \
   single_file_1.ttl
 	rm -f _$@ __$@
 	python ../case_to_dfxml.py --debug single_file_1.ttl >(xmllint --format - > _$@)
 	mv _$@ $@
 
 single_file_2.json.dfxml: \
-  ../case_to_dfxml.py \
+  $(case_to_dfxml_dependencies) \
   single_file_1.json
 	rm -f _$@ __$@
 	python ../case_to_dfxml.py --debug single_file_1.json >(xmllint --format - > _$@)
 	mv _$@ $@
 
 single_filesystem_single_file_0.dfxml: \
-  Objects.py \
+  $(objects_py_dependencies) \
   empty.json \
   single_filesystem_single_file_0_dfxml.py
 	rm -f _$@ __$@
@@ -151,22 +171,22 @@ single_filesystem_single_file_0.dfxml: \
 	mv _$@ $@
 
 single_filesystem_single_file_0_2_deltas.dfxml: \
-  make_differential_dfxml.py \
+  $(make_differential_dfxml_dependencies) \
   single_filesystem_single_file_2.dfxml.validates.log
 	rm -f _$@
-	python make_differential_dfxml.py --retain-unchanged single_filesystem_single_file_{0,2}.dfxml | xmllint --format - > _$@
+	make_differential_dfxml --debug --retain-unchanged single_filesystem_single_file_{0,2}.dfxml | xmllint --format - > _$@
 	mv _$@ $@
 
 single_filesystem_single_file_1.ttl: \
   ../.setup_complete \
-  ../dfxml_to_case.py \
+  $(dfxml_to_case_dependencies) \
   single_filesystem_single_file_0.dfxml.validates.log
 	rm -f _$@
 	python ../dfxml_to_case.py --debug --output-format=ttl single_filesystem_single_file_0.dfxml _$@
 	mv _$@ $@
 
 single_filesystem_single_file_2.dfxml: \
-  ../case_to_dfxml.py \
+  $(case_to_dfxml_dependencies) \
   single_filesystem_single_file_1.ttl
 	rm -f _$@ __$@
 	python ../case_to_dfxml.py --debug single_filesystem_single_file_1.ttl >(xmllint --format - > _$@)
