--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 #TODO
-name = case_cli_example
-version = attr: case_cli_example.__version__
+name = case_dfxml
+version = attr: case_dfxml.__version__
 author = Alex Nelson
 author_email = alexander.nelson@nist.gov
 description = A mapping between DFXML and CASE
@@ -29,7 +29,7 @@ python_requires = >=3.9
 [options.entry_points]
 console_scripts =
     #TODO
-    case_cli_example = case_cli_example.cli:main
+    case_dfxml = case_dfxml.cli:main
 
 [options.extras_require]
 testing =
@@ -37,7 +37,7 @@ testing =
 
 [options.package_data]
 #TODO
-case_cli_example = py.typed
+case_dfxml = py.typed
 
 [flake8]
 # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
