Update testing to review current CASE Examples repository; remove out-of-date submodules
No effects were observed on Make-managed files.

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,7 @@
-[submodule "deps/case"]
-	path = deps/case
-	url = https://github.com/ajnelson-nist/case.git
-[submodule "deps/case-api-python"]
-	path = deps/case-api-python
-	url = https://github.com/casework/case-api-python.git
+[submodule "deps/CASE-Examples"]
+	path = deps/CASE-Examples
+	url = https://github.com/casework/CASE-Examples.git
+	branch = master
 [submodule "deps/case-implementation-plaso"]
 	path = deps/case-implementation-plaso
 	url = https://github.com/casework/case-implementation-plaso.git
