--- a/tests/case_examples/Makefile
+++ b/tests/case_examples/Makefile
@@ -18,6 +18,7 @@ SHELL = /bin/bash
 
 top_srcdir := ../..
 
+#BOOKMARK^
 dfxml_xsd := $(top_srcdir)/deps/dfxml_schema/dfxml.xsd
 
 dfxml_top_srcdir := $(top_srcdir)/deps/dfxml
@@ -30,34 +31,93 @@ case_to_dfxml_dependencies := \
   $(objects_py_dependencies) \
   $(top_srcdir)/case_to_dfxml.py
 
+#BOOKMARKv
+
 all:
 
-# Retain inferred .dfxml files.
-#  C/o: https://www.gnu.org/software/make/manual/html_node/Chained-Rules.html
-.PRECIOUS: \
-  %.dfxml
+Oresteia.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/Oresteia/Oresteia.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
 
-%.dfxml: \
-  ../../deps/case/examples/%.json \
-  $(dfxml_xsd) \
-  $(case_to_dfxml_dependencies) \
-  ../.venv.done.log
-	rm -f __$@ _$@
-	source ../venv/bin/activate \
-	  && python ../../case_to_dfxml.py \
-	    $< \
-	    __$@
-	xmllint \
-	  --format \
-	  --schema $(dfxml_xsd) \
-	  __$@ \
-	  > _$@
-	rm __$@
-	mv _$@ $@
+accounts.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/accounts/accounts.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
 
-# NOTE: Some example files are purposefully omitted because they include design comments that Python's JSON library cannot parse.  These files are:
-#  reconstructed_file.json
-#  sms_and_contacts.json
+bulk_extractor_forensic_path.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/bulk_extractor_forensic_path/bulk_extractor_forensic_path.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
+
+call_log.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/call_log/call_log.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
+
+device.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/device/device.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
+
+exif_data.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/exif_data/exif_data.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
+
+file.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/file/file.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
+
+forensic_lifecycle.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/forensic_lifecycle/forensic_lifecycle.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
+
+location.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/location/location.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
+
+message.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/message/message.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
+
+multipart_file.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/multipart_file/multipart_file.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
+
+raw_data.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/raw_data/raw_data.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
+
+reconstructed_file.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/reconstructed_file/reconstructed_file.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
+
+sms_and_contacts.dfxml: \
+  ../../deps/CASE-Examples/examples/illustrations/sms_and_contacts/sms_and_contacts.json
+	$(MAKE) \
+	  subject_jsonld=$< \
+	  --file example.mk
 
 check: \
   Oresteia.dfxml \
@@ -71,7 +131,9 @@ check: \
   location.dfxml \
   message.dfxml \
   multipart_file.dfxml \
-  raw_data.dfxml
+  raw_data.dfxml \
+  reconstructed_file.dfxml \
+  sms_and_contacts.dfxml
 
 clean:
 	@rm -f \
